--- a/app/src/main/res/layout/mainactivity.xml
+++ b/app/src/main/res/layout/mainactivity.xml
@@ -87,12 +87,14 @@
         android:onClick="login"
         android:background="@drawable/mybutton"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="30dp"
-        android:textSize="14sp"
-        android:text="Dont't have an account? Register"
-        android:textColor="#3498DB"/>
+    <Button
+        android:id="@+id/signup_button"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="90dp"
+        android:text="New User? Sign Up"
+        android:textSize="20sp"
+        android:onClick="login"
+        android:background="#00000000"
+        android:textColor="@color/black"/>
 </LinearLayout>
