--- a/app/src/main/res/layout/mainactivity.xml
+++ b/app/src/main/res/layout/mainactivity.xml
@@ -45,6 +45,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:hint="abc@gmail.com"
+        android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         android:textColor="@color/black"/>
     <TextView
@@ -65,6 +66,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:hint="*****"
+        android:textColorHint="@color/black"
         android:inputType="textPassword"
         android:textColor="@color/black"/>
 
@@ -81,7 +83,7 @@
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:text="Login"
         android:textSize="20sp"
         android:onClick="login"
@@ -90,10 +92,10 @@
     <Button
         android:id="@+id/signup_button"
         android:layout_width="220dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="90dp"
         android:text="New User? Sign Up"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:onClick="login"
         android:background="#00000000"
         android:textColor="@color/black"/>
