--- a/app/src/main/res/layout/activity_forget_passwrod.xml
+++ b/app/src/main/res/layout/activity_forget_passwrod.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgetPasswrod"
+    tools:context=".ForgotPassword.ForgetPassword"
     android:background="#C2DFFF"
     android:padding="30dp">
 
@@ -14,8 +14,10 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="GoBack"
             android:padding="5dp"
             android:src="@drawable/ic_baseline_arrow_back_24" />
 
@@ -64,20 +66,21 @@
             android:textColorHint="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/login_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/next_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="NEXT"
-            android:background="@color/black"
-            android:textColor="@color/white"
-            android:layout_marginTop="20dp"
             android:layout_gravity="center"
-            />
+            android:layout_marginTop="20dp"
+            android:background="@color/black"
+            android:text="NEXT"
+            android:textColor="@color/white" />
 
 
 
