--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VerifyOtp"
+    tools:context=".ForgotPassword.VerifyOtp"
     android:background="#C2DFFF">
 
     <LinearLayout
@@ -14,11 +14,13 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="Abort"
+            android:padding="5dp"
             android:src="@drawable/ic_baseline_close_24"
-            android:tint="@color/black"
-            android:padding="5dp" />
+            android:tint="@color/black" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,7 +44,66 @@
             android:textAllCaps="true"
             android:layout_gravity="center"/>
 
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Otp has been sent on the registered email"
+            android:textSize="16sp"
+            android:layout_marginTop="50dp"
+            android:textAlignment="center"
+            android:includeFontPadding="false"
+            android:layout_gravity="center"/>
 
+        <com.chaos.view.PinView
+            android:id="@+id/otp"
+            style="@style/PinWidget.PinView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:cursorVisible="true"
+            android:inputType="number"
+            android:itemBackground="@color/lightWhite"
+            app:cursorColor="@color/black"
+            app:hideLineWhenFilled="true"
+            app:itemCount="6"
+            app:itemHeight="50dp"
+            app:itemRadius="5dp"
+            app:itemWidth="50dp"
+            app:lineColor="@color/colorAccent" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="Didn\'t receive the OTP?"
+                android:textSize="16sp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="30dp"/>
+
+            <TextView
+                android:id="@+id/resend_otp"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="-33dp"
+                android:layout_marginTop="30dp"
+                android:onClick="ResendOtp"
+                android:text="RESEND OTP"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/verify_code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/black"
+            android:text="Verify Code" />
 
     </LinearLayout>
 </ScrollView>
