--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForgotPassword.VerifyOtp"
-    android:background="#C2DFFF">
+    android:background="#C2DFFF"
+    android:gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="30dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="-7dp">
 
-        <ImageView
-            android:id="@+id/cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="Abort"
-            android:padding="5dp"
-            android:src="@drawable/ic_baseline_close_24"
-             />
+<!--        <ImageView-->
+<!--            android:id="@+id/cancel"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:onClick="Abort"-->
+<!--            android:padding="5dp"-->
+<!--            android:src="@drawable/ic_baseline_close_24"-->
+<!--             />-->
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,6 +30,7 @@
             android:text="Code"
             android:textSize="100sp"
             android:fontFamily="@font/bungee"
+            android:textColor="@color/black"
             android:textAllCaps="true"
             android:layout_gravity="center"
             android:textAlignment="center"
@@ -37,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Verification"
+            android:textColor="@color/black"
             android:textSize="24sp"
             android:fontFamily="@font/bungee"
             android:textAlignment="center"
@@ -63,6 +67,7 @@
             android:layout_marginTop="50dp"
             android:cursorVisible="true"
             android:inputType="number"
+            android:textColor="@color/black"
             android:itemBackground="@color/lightWhite"
             app:cursorColor="@color/black"
             app:hideLineWhenFilled="true"
@@ -106,4 +111,4 @@
             android:text="Verify Code" />
 
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
