--- a/app/src/main/res/layout/activity_forget_password_success_message.xml
+++ b/app/src/main/res/layout/activity_forget_password_success_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgotPassword.ForgetPasswordSuccessMessage"
+    tools:context=".ForgotPasswordActivities.ForgetPasswordSuccessMessage"
     android:background="#C2DFFF"
     android:padding="30dp"
     android:orientation="vertical">
