--- a/app/src/main/res/layout/activity_forget_passwrod.xml
+++ b/app/src/main/res/layout/activity_forget_passwrod.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgotPassword.ForgetPassword"
+    tools:context=".ForgotPasswordActivities.ForgetPassword"
     android:background="#C2DFFF"
     android:padding="30dp">
 
