--- a/app/src/main/res/layout/shop_card_view.xml
+++ b/app/src/main/res/layout/shop_card_view.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="220dp">
+    android:layout_height="240dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="2dp"
+    android:layout_margin="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/shop_image"
@@ -26,7 +31,7 @@
                 android:layout_marginLeft="20dp"
                 android:fontFamily="@font/bungee"
                 android:lines="2"
-                android:maxEms="12"
+                android:maxEms="10"
                 android:layout_marginTop="5dp"
                 android:text="Biyal Pharmaeuticals"
                 android:textSize="20sp" />
