--- a/app/src/main/res/layout/category_card_view.xml
+++ b/app/src/main/res/layout/category_card_view.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:padding="10dp"
         android:orientation="vertical"
-        android:background="@color/lightWhite">
+        android:background="@color/white">
         <ImageView
             android:id="@+id/category_image"
             android:layout_width="match_parent"
