--- a/app/src/main/res/layout/shop_card_view.xml
+++ b/app/src/main/res/layout/shop_card_view.xml
@@ -5,13 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="2dp"
-    android:layout_margin="10dp">
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/shop_image"
@@ -30,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:fontFamily="@font/bungee"
+                android:textColor="@color/black"
                 android:lines="2"
                 android:maxEms="10"
                 android:layout_marginTop="5dp"
@@ -42,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:textColor="@color/black"
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/bungee"
                 android:text="2.3 Km" />
