--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,6 +8,10 @@
     android:background="#C2DFFF"
     tools:context=".HomeActivity.HomePage">
 
+    <fragment android:id="@+id/autocomplete_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
 
     <RelativeLayout
         android:id="@+id/top_bar"
