--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -23,18 +23,20 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:tint="@color/teal_700"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
-                android:src="@drawable/ic_baseline_arrow_back_24" />
+                android:layout_marginTop="10dp"
+                android:onClick="Back"
+                android:src="@drawable/ic_baseline_arrow_back_24"
+                app:tint="@color/teal_700" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="600dp"
-                android:layout_marginStart="380dp"
-                app:tint="@color/teal_700"
-                android:src="@drawable/ic_geolocate" />
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="360dp"
+                android:layout_marginTop="550dp"
+                android:onClick="PickCurrentPlace"
+                android:src="@drawable/ic_geolocate"
+                app:tint="@color/teal_700" />
 
 
         </fragment>
@@ -79,11 +81,15 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/current_location"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/currentlocation"
+                    android:layout_width="330dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="Chudiala"
+                    android:text="Chudiala "
+                    android:textColor="@color/black"
+                    android:scrollHorizontally="true"
+                    android:ellipsize="end"
+                    android:singleLine="true"
                     android:textSize="20sp" />
 
                 <TextView
