--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,11 +8,6 @@
     android:background="#C2DFFF"
     tools:context=".HomeActivity.HomePage">
 
-    <fragment android:id="@+id/autocomplete_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
-
     <RelativeLayout
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
@@ -64,12 +59,16 @@
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/address"
-            android:layout_width="wrap_content"
+            android:id="@+id/current_address"
+            android:onClick="ChangeAddress"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="3dp"
             android:text="140307 Chudiala"
+            android:singleLine="true"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
             android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>
