--- a/app/src/main/res/layout/category_card_view.xml
+++ b/app/src/main/res/layout/category_card_view.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
     android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="2dp"
+    app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    app:strokeColor="@color/teal_700"
+    app:strokeWidth="2dp">
 
     <LinearLayout
         android:id="@+id/card_view"
@@ -17,7 +19,7 @@
         <ImageView
             android:id="@+id/category_image"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="120dp"
             android:src="@drawable/app_logo"
             android:scaleType="centerCrop"/>
 
@@ -27,7 +29,8 @@
             android:layout_height="wrap_content"
             android:text="Gel"
             android:textSize="25sp"
+            android:layout_marginTop="3dp"
             android:textColor="@color/black"
             android:layout_gravity="center"/>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
