--- a/app/src/main/res/layout/shop_card_view.xml
+++ b/app/src/main/res/layout/shop_card_view.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
+    android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
-    app:cardCornerRadius="2dp"
-    android:layout_marginTop="10dp">
+    app:cardCornerRadius="15dp"
+    android:layout_marginTop="10dp"
+    app:strokeColor="@color/teal_700"
+    app:strokeWidth="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,6 +22,13 @@
             android:layout_height="160dp"
             android:src="@drawable/biyal_shop__1_"
             android:layout_gravity="center"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/teal_700" />
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -53,4 +62,4 @@
 
 
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
