--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -4,124 +4,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ProfileActivity.ProfileActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
         android:background="@color/teal_700"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="10dp">
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="5dp"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            app:tint="@color/white" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="15dp"
-            android:text="PROFILE"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="30sp" />
+            <ImageView
+                android:id="@+id/back_button"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="12dp"
+                android:src="@drawable/ic_baseline_arrow_back_24"
+                app:tint="@color/white" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_toRightOf="@id/back_button"
+                android:text="My Profile"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="3dp"
+                android:text="SAVE"
+                android:visibility="invisible" />
+        </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:background="@color/lightWhite"
         android:orientation="vertical">
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/name_edittext"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:singleLine="true"
+            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
+            android:drawableRight="@drawable/ic_baseline_edit_24"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/teal_700"
+            android:text="Pankaj Chhabra"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/ic_baseline_account_circle_24"
-                app:tint="@color/teal_700" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:layout_marginStart="10dp"
-                android:text="Name" />
-
-            <ImageView
-                android:id="@+id/edit_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="290dp"
-                android:src="@drawable/ic_baseline_edit_24"
-                app:tint="@color/teal_700" />
-
-        </LinearLayout>
-
-        <LinearLayout
+        <EditText
+            android:id="@+id/phone_edittext"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
-            android:orientation="horizontal">
+            android:layout_marginRight="5dp"
+            android:clickable="false"
+            android:singleLine="true"
+            android:cursorVisible="false"
+            android:drawableLeft="@drawable/ic_baseline_phone_24"
+            android:drawableRight="@drawable/ic_baseline_edit_24"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/teal_700"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="7009964216"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/ic_baseline_phone_24"
-                app:tint="@color/teal_700" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:layout_marginStart="10dp"
-                android:text="Phone" />
-
-            <ImageView
-                android:id="@+id/edit_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="290dp"
-                android:src="@drawable/ic_baseline_edit_24"
-                app:tint="@color/teal_700" />
-
-        </LinearLayout>
-
-        <LinearLayout
+        <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/ic_mail"
-                app:tint="@color/teal_700" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:layout_marginStart="10dp"
-                android:text="Email" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="5dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:drawableLeft="@drawable/ic_baseline_email_24"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/teal_700"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="pnkj.chhbra123@gmail.com"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -152,6 +145,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:text=" Manage Addresses" />
 
         </LinearLayout>
@@ -174,6 +169,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:text="Orders History" />
 
         </LinearLayout>
@@ -196,6 +193,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:text="Need Help ? Contact Us" />
 
         </LinearLayout>
@@ -204,6 +203,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginTop="20dp"
+            android:onClick="Logout"
             android:orientation="horizontal">
 
             <ImageView
@@ -215,8 +215,11 @@
 
             <TextView
                 android:id="@+id/logout"
+                android:onClick="Logout"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:layout_marginStart="10dp"
                 android:text="Logout" />
 
