--- a/app/src/main/res/layout/shop_card_view.xml
+++ b/app/src/main/res/layout/shop_card_view.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="15dp"
     android:layout_marginTop="10dp"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="8dp"
     app:strokeColor="@color/teal_700"
     app:strokeWidth="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:background="@color/white">
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/shop_image"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:src="@drawable/biyal_shop__1_"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:src="@drawable/biyal_shop__1_" />
 
         <View
             android:layout_width="fill_parent"
@@ -39,12 +39,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/bungee"
-                android:textColor="@color/black"
                 android:lines="2"
                 android:maxEms="10"
-                android:layout_marginTop="5dp"
                 android:text="Biyal Pharmaeuticals"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
@@ -53,10 +53,21 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:textColor="@color/black"
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/bungee"
-                android:text="2.3 Km" />
+                android:text="2.3 Km"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/shop_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="10dp"
+                android:fontFamily="@font/bungee"
+                android:text="Rs. 10"
+                android:textColor="@color/black" />
 
         </RelativeLayout>
 
