--- a/app/src/main/res/layout/activity_shop_inventory.xml
+++ b/app/src/main/res/layout/activity_shop_inventory.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:onClick="Back"
             android:layout_width="40dp"
             android:layout_height="30dp"
             android:layout_marginStart="5dp"
@@ -24,6 +25,7 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/shop_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -36,6 +38,7 @@
         android:textSize="22sp" />
 
     <TextView
+        android:id="@+id/shop_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
