cart in progress

--- a/app/src/main/res/layout/changepassworddialog.xml
+++ b/app/src/main/res/layout/changepassworddialog.xml
@@ -70,7 +70,7 @@
         android:textColor="@color/black"
         />
     <EditText
-        android:id="@+id/login_username"
+        android:id="@+id/confirm_new_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -78,7 +78,7 @@
         android:backgroundTint="@color/black"
         android:hint="*****"
         android:textColorHint="@color/black"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
         android:textColor="@color/black"/>
 
     <Button
