--- a/app/src/main/res/layout/activity_shop_inventory.xml
+++ b/app/src/main/res/layout/activity_shop_inventory.xml
@@ -211,6 +211,7 @@
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:textColor="@color/black"
                 android:text="4 items in cart"
                 android:textSize="15sp" />
 
@@ -219,6 +220,7 @@
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:textColor="@color/black"
                 android:text="Rs. 456"
                 android:textSize="15sp" />
         </LinearLayout>
