--- a/app/src/main/res/layout/cart_card_view.xml
+++ b/app/src/main/res/layout/cart_card_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="170dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="2dp"
     app:cardElevation="8dp"
@@ -9,76 +9,78 @@
     android:paddingLeft="2dp"
     android:paddingRight="2dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/medicine_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/crocin"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="15dp" />
+
+            <LinearLayout
+                android:id="@+id/med_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/medicine_image">
+
+                <TextView
+                    android:id="@+id/medicine_name"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sample_medicine_name"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:layout_marginTop="10dp"
+                    />
+
+                <TextView
+                    android:id="@+id/medicine_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sample_medicine_size"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:layout_marginTop="5dp" />
+
+                <TextView
+                    android:id="@+id/medicine_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bungee"
+                    android:text="Rs. 24"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/delete_icon"
+                android:layout_toRightOf="@id/med_details"
+                android:layout_width="35dp"
+                android:tint="@color/teal_700"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/icons8_trash_can_50"/>
+
             <Button
                 android:id="@+id/quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:layout_below="@id/delete_icon"
+                android:layout_marginLeft="-30dp"
+                android:layout_marginTop="18dp"
+                android:layout_toRightOf="@id/med_details"
                 android:backgroundTint="@color/teal_700"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_alignParentBottom="true"
-                android:textColor="@color/white"
-                android:text="Quantity 4" />
+                android:text="Qty 20"
+                android:textColor="@color/white" />
         </RelativeLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_alignParentRight="true">
-
-            <TextView
-                android:id="@+id/medicine_name"
-                android:layout_width="270dp"
-                android:layout_height="wrap_content"
-                android:text="@string/sample_medicine_name"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:layout_marginTop="10dp"
-                />
-
-            <TextView
-                android:id="@+id/medicine_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sample_medicine_size"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:layout_marginTop="5dp" />
-
-            <TextView
-                android:id="@+id/medicine_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/bungee"
-                android:text="Rs. 24"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:layout_marginTop="5dp" />
-
-        </LinearLayout>
-    </RelativeLayout>
-
 </androidx.cardview.widget.CardView>
