--- a/app/src/main/res/layout/activity_shop_inventory.xml
+++ b/app/src/main/res/layout/activity_shop_inventory.xml
@@ -153,7 +153,6 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"
             android:background="@drawable/searchbox_lightwhite"
-            android:hint="Search for Medicines"
             android:inputType="text"
             android:maxLines="1"
             android:paddingLeft="10dp"
@@ -212,7 +211,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:textColor="@color/black"
-                android:text="4 items in cart"
+                android:text="4 items in cartService"
                 android:textSize="15sp" />
 
             <TextView
@@ -231,7 +230,8 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:backgroundTint="@color/teal_700"
-            android:text="View Cart" />
+            android:text="View Cart"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 </LinearLayout>
